Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-6614

open_doc_with_docinfo failure due to an invalid docinfo being passed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0
    • 2.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Windows

    Description

      Thie issue described below occurs very rarely during mixed I/O tests on Windows (concurrent GET/SET). The root cause may be the same as MB-6199, however, EP Engine should do better in terms of logging this rare error case for future triaging.

      EP Engine's batch reader (bgfetcher) runs into a failure (invalid docinfo, no doc can be found by the docinfo) from couchstore_open_doc_with_docinfo.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jin Jin Lim (Inactive)
            jin Jin Lim (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty