MB-6614 log invalid docinfo error and continue bgfetch

Log error message when couchstore_get_docinfos_by_sequence() returns
invalid docinfo (unknown seq id) and continue bgfetch initiated by
getMulti().

Change-Id: I2ac334f682cd8159e5a3f69551298554caffe046
Reviewed-on: http://review.couchbase.org/20761
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Jin Lim <jin@couchbase.com>